--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kalaakshethra</title>
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="Stylesprof.css">
+    <link rel="stylesheet" href="rolling.css">
 
     
 
@@ -257,6 +258,9 @@
             <h3 style="color: purple;">Pending Fee Report</h3>
             <iframe id="pdfViewer" src="" frameborder="0" style="width: 100%; height: 500px; border: 1px solid #ccc; border-radius: 10px;"></iframe>
         </div>        
+    </div>
+     <div class="banner-container">
+    <div class="rolling-text">Arangettam February 21 Vaikunneram 6 manik</div>
     </div>
     <script>
         const pdfFiles = {
