--- a/index.html
+++ b/index.html
@@ -259,9 +259,13 @@
             <iframe id="pdfViewer" src="" frameborder="0" style="width: 100%; height: 500px; border: 1px solid #ccc; border-radius: 10px;"></iframe>
         </div>        
     </div>
-     <div class="banner-container">
-    <div class="rolling-text">Arangettam February 21 Vaikunneram 6 manik</div>
-    </div>
+    <div class="banner-container">
+    <div class="rolling-text">അരങ്ങേറ്റം 2025 ഫെബ്രുവരി 21 വെള്ളിയാഴ്ച്ച നടത്താൻ തീരുമാനിച്ചിരിക്കുന്നു.  </div>
+  </div>
+
+  <div class="banner-container2">
+    <div class="rolling-text">ഏല്ലാവരും Pending ഫീസുകൾ ഉടനേ അടച്ച് തീർക്കണമെന്ന് അഭ്യർത്ഥിക്കുന്നു.</div>
+  </div>
     <script>
         const pdfFiles = {
         "ABHAYJITH": "https://raw.githubusercontent.com/Rahulkrishnanj/Chendaclass/Chenda/ABHAYJITH.pdf",
