--- a/profexceldata.html
+++ b/profexceldata.html
@@ -83,7 +83,7 @@
     </div>
      <!-- Action Buttons -->
      <div class="button-box">
-        <button id="view-report"><a href="Previewpdf.html">View Fees Report</a></button>
+        <button id="view-report"><a href="report.html">View Fees Report</a></button>
         <button id="pay-fees"><a href="upi.html">Pay Pending Fees</a></button>
     </div>
     <br>
